@@ -4,11 +4,11 @@ if [ -f /home/icpc/.cleandisk.sh ]; then
 rm -rf /home/icpc
 find /home -user icpc -delete
 if [ -x /usr/bin/makepasswd ]; then
- pass=`echo -n icpc | makepasswd --clearfrom - --crypt-md5 | cut -d'$' -f2-`
+ pass=`echo -n icpc | /usr/bin/makepasswd --clearfrom - --crypt-md5 | cut -d'$' -f2-`
  pass=\$`echo $pass`
  id -u icpc >/dev/null 2>/dev/null
  if [ $? != 0 ]; then
-  useradd -d /home/icpc -m -p "$pass" -s /bin/bash -g users icpc
+  useradd -d /home/icpc -k /etc/skel -m -p "$pass" -s /bin/bash -g users icpc
  else
   usermod -d /home/icpc -p "$pass" -s /bin/bash -g users icpc
  fi
@@ -23,6 +23,7 @@ if [ ! -d /home/icpc ]; then
   mv /home/skel /home/icpc
 fi
 chown -R icpc.users /home/icpc
+chmod -R u+rwx /home/icpc
 fi
 cd - >/dev/null
 exit 0
